--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "react": "^19.2.3",
-    "@google/genai": "^1.35.0",
     "react-dom": "^19.2.3",
-    "recharts": "^3.6.0",
-    "lucide-react": "^0.562.0"
+    "@google/genai": "1.3.0",
+    "recharts": "2.15.0",
+    "lucide-react": "0.471.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
