--- a/package.json
+++ b/package.json
@@ -9,19 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "1.3.0",
-    "@tailwindcss/vite": "^4.1.18",
-    "lucide-react": "0.471.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "recharts": "2.15.0"
+    "lucide-react": "0.471.1",
+    "recharts": "2.15.0",
+    "@google/genai": "1.3.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.23",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
